--- a/docker.yaml
+++ b/docker.yaml
@@ -4,9 +4,22 @@
   become: yes
   
   tasks:
+    - name: Update apt cache
+      apt:
+        update_cache: yes
+
+    - name: Install python3-apt
+      apt:
+        name: python3-apt
+        state: present
+
+    - name: nginx
+      apt:
+        name: nginx
+        state: present
     - name: index.html
       get_url:
-        url: https://www.jobkorea.com
+        url: https://www.nginx.com
         dest: /var/www/html
     - name: service 
       service:
