--- a/docker.yaml
+++ b/docker.yaml
@@ -4,6 +4,9 @@
   become: yes
   
   tasks:
+    - name: Install python3-apt
+      raw: sudo apt-get install -y python3-apt
+      
     - name: Update apt cache
       apt:
         update_cache: yes
