--- a/docker.yaml
+++ b/docker.yaml
@@ -1,14 +1,9 @@
+
 ---
 - name: web
-  hosts: localhost
+  hosts: all
   become: yes
   
-  tasks: 
-    - name: Set placement preferences
-      docker_swarm_service:
-        name: myweb
-        image: nginx
-        placement:
-          constraints:
-            - node.role == worker
-
+  tasks:
+    - name: nginx
+    - shell: docker service create --name test1 --replicas 3 --constraint node.role==worker --with-registry-auth -p 8001:80 nginx
