--- a/docker.yaml
+++ b/docker.yaml
@@ -5,5 +5,5 @@
   become: yes
   
   tasks:
-    - name: ping
-      shell: ping www.google.com -c 3
+    - name: nginx
+    - shell: docker service create --name test1 --replicas 3 --constraint node.role==worker --with-registry-auth -p 8004:80 nginx
